@@ -1,3 +1,9 @@
+2008-12-16  David Teller  <David.Teller@univ-orleans.fr>
+
+	* src/main/threads/batteries.ml: Dlllist, Dynarray, MultiPMap, Base64 added
+
+	* src/main/nothreads/batteries.ml: Dlllist, Dynarray, MultiPMap, Base64 added
+
 2008-12-15  David Teller  <David.Teller@univ-orleans.fr>
 
 	* src/main/threads/batteries.mllib: Batlib_Baselib_Thread, Batlib_Baselib_Mutex, Batlib_Baselib_Condition, Batlib_Baselib_Event, Batlib_Baselib_StringLabels, Batlib_Baselib_Set 	removed
